// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render count and total with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $9,000
  </p>
</div>
`;

exports[`should render count and total with single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expenses totalling 
    $1,000
  </p>
</div>
`;
